<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/dialog_recheck_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/absence_date"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvRecheckDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="04/11"/>

        <TextView
            android:id="@+id/tvRecheckInterval"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tvMorning"
            android:gravity="left|center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:text="@string/absence_course"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvRecheckCourse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="Android"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:text="@string/absence_teacher"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvRecheckTeacher1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="left|center_vertical"
            android:text="---"/>
        <TextView
            android:id="@+id/tvRecheckTeacher2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="left|center_vertical"
            android:text="吳冠宏"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/tvRecheckTeacher3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="left|center_vertical"
            android:text="吳冠宏"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="left|center_vertical"
            android:text="吳冠宏"
            android:visibility="invisible"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:text="@string/absence_note"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

        <EditText
            android:id="@+id/edRecheckNote"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="top"
            android:minLines="4"
            android:layout_marginLeft="13dp"
            android:hint="@string/absence_note_hint"
            android:backgroundTint="@color/colorDarkBlue"
            android:textCursorDrawable="@drawable/darkblue_cursor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="end|right"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnRecheckCancel"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="end|center_vertical"
            android:text="@string/cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorDarkBlue"
            android:theme="@style/BorderlessButton" />
        <Button
            android:id="@+id/btnRecheckSubmit"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="end|center_vertical"
            android:text="@string/apply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorDarkBlue"
            android:theme="@style/BorderlessButton" />


    </LinearLayout>
</LinearLayout>
