<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".campuszone.AbsenceApplyActivity">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="10dp"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="right|center_vertical"
            android:text="@string/apply_date"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvApplyDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="04/11"/>

        <TextView
        android:id="@+id/tvApplyInterval"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/tvMorning"
        android:gravity="left|center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:text="@string/absence_course"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvAbsenceCourse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="Android"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:text="@string/absence_teacher"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvAbsenceTeacher"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="吳冠宏"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:text="@string/absence_type"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary" />
        <Spinner
            android:id="@+id/spAbsenceType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:text="@string/absence_note"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edAbsenceNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:gravity="top"
        android:minLines="4"
        android:hint="@string/absence_note_hint"
        android:backgroundTint="@color/colorDarkBlue"
        android:textCursorDrawable="@drawable/darkblue_cursor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="end|right"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <Button
            android:id="@+id/btnAbsenceCancel"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="end|center_vertical"
            android:text="@string/cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorDarkBlue"
            android:theme="@style/BorderlessButton" />
        <Button
            android:id="@+id/btnAbsenceSubmit"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="end|center_vertical"
            android:text="@string/apply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorDarkBlue"
            android:theme="@style/BorderlessButton" />

    </LinearLayout>
    </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="25dp"
            android:src="@drawable/icons8_event_24"
            app:backgroundTint="@color/colorDarkRed"
            android:onClick="onClickSelectDate"/>
        </FrameLayout>
</LinearLayout>